A whole new world
 - I've been using a simpler set of scripts for a while, this commit
   just brings them over to the public repo

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@
 !README.md
 !LICENSE
 !*.py
-
-!transcoding_tools/
-transcoding_tools/*
-!transcoding_tools/*.py
+!other-tools
+other-tools/*
+!other-tools/*.py
